--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"framer-motion": "^12.0.6",
 		"next": "15.1.6",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"usehooks-ts": "^3.1.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
